{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 185,
  "lineage": "c5d427a5-bfd0-8080-6639-41285b77b756",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skubestore_controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e252491d0220a36",
            "arn": "arn:aws:ec2:us-east-1:590184057629:instance/i-0fb771f0495d01735",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skubestore-node-role",
            "id": "i-0fb771f0495d01735",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "main-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006321c7bf5605411",
            "private_dns": "ip-172-20-10-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.10",
            "public_dns": "ec2-54-90-223-176.compute-1.amazonaws.com",
            "public_ip": "54.90.223.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051a8fb3b91453cec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b5947e749cd8bdf",
            "tags": {
              "Name": "skubestore-controlplane"
            },
            "tags_all": {
              "Name": "skubestore-controlplane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0772bcd892c0a93a7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.skubestore_node_role",
            "aws_iam_role.ec2_role",
            "aws_security_group.skubestore_node_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skubestore_node_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-049542b40a4a26e0d",
            "arn": "arn:aws:ec2:us-east-1:590184057629:instance/i-0b1591dad951eed6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skubestore-node-role",
            "id": "i-0b1591dad951eed6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "main-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035aa1f8fcec3f6ff",
            "private_dns": "ip-172-20-10-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.20",
            "public_dns": "ec2-54-226-54-30.compute-1.amazonaws.com",
            "public_ip": "54.226.54.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a27d02acd49a4fed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b5947e749cd8bdf",
            "tags": {
              "Name": "skubestore-node-01"
            },
            "tags_all": {
              "Name": "skubestore-node-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0772bcd892c0a93a7"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.skubestore_node_role",
            "aws_iam_role.ec2_role",
            "aws_security_group.skubestore_node_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:internet-gateway/igw-0377d89c9df972828",
            "id": "igw-0377d89c9df972828",
            "owner_id": "590184057629",
            "tags": {
              "Name": "skubestore-vpc-igw"
            },
            "tags_all": {
              "Name": "skubestore-vpc-igw"
            },
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:route-table/rtb-00136294cb4c2e6b2",
            "id": "rtb-00136294cb4c2e6b2",
            "owner_id": "590184057629",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "skubestore-private-route-table"
            },
            "tags_all": {
              "Name": "skubestore-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:route-table/rtb-0b718d74f8c3a2dfa",
            "id": "rtb-0b718d74f8c3a2dfa",
            "owner_id": "590184057629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0377d89c9df972828",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skubestore-public-route-table"
            },
            "tags_all": {
              "Name": "skubestore-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01824c4a49aa0c1af",
            "route_table_id": "rtb-00136294cb4c2e6b2",
            "subnet_id": "subnet-059ec68957aeb6a35"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7c9a57aced1680",
            "route_table_id": "rtb-00136294cb4c2e6b2",
            "subnet_id": "subnet-04c5fd62da351dba2"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae552ac2a8267a9",
            "route_table_id": "rtb-0b718d74f8c3a2dfa",
            "subnet_id": "subnet-09b5947e749cd8bdf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012a74b0632e58a2f",
            "route_table_id": "rtb-0b718d74f8c3a2dfa",
            "subnet_id": "subnet-0bc7023e929b58bd4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skubestore_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:security-group/sg-0772bcd892c0a93a7",
            "description": "Security group for Skubestore nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0772bcd892c0a93a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.139.18.223/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "skubestore-node-sg",
            "name_prefix": "",
            "owner_id": "590184057629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skubestore-node-sg"
            },
            "tags_all": {
              "Name": "skubestore-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:subnet/subnet-059ec68957aeb6a35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059ec68957aeb6a35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184057629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skubestore-private-subnet-1",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "skubestore-private-subnet-1",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:subnet/subnet-04c5fd62da351dba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c5fd62da351dba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184057629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skubestore-private-subnet-2",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "skubestore-private-subnet-2",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:subnet/subnet-09b5947e749cd8bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b5947e749cd8bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184057629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skubestore-public-subnet-1",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "skubestore-public-subnet-1",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:subnet/subnet-0bc7023e929b58bd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc7023e929b58bd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184057629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skubestore-public-subnet-2",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "skubestore-public-subnet-2",
              "kubernetes.io/cluster/kubernetes": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-080dfc90b5996890d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184057629:vpc/vpc-080dfc90b5996890d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-031979d4351115586",
            "default_route_table_id": "rtb-0746098818c7d1826",
            "default_security_group_id": "sg-0d9bbe2c45a0868f5",
            "dhcp_options_id": "dopt-08b18ac61076f59cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080dfc90b5996890d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0746098818c7d1826",
            "owner_id": "590184057629",
            "tags": {
              "Name": "skubestore-vpc"
            },
            "tags_all": {
              "Name": "skubestore-vpc"
            }
          }
        }
      ]
    }
  ]
}